<resources>
    <string name="app_name">PracticalTask</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="have_an_account">Have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name">User Name</string>

    <string name="name_digits">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ </string>
    <string name="user_name_digits">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789_</string>
    <string name="alphabets_only">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="full_name">Full Name</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>

    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_valid_email">Please enter valid email</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="password_validation_message">Password must contain Minimum 6 characters at least 1 Alphabet and 1 Number</string>

    <string name="please_enter_user_name">Please enter user name</string>
    <string name="please_enter_full_name">Please enter full name</string>
    <string name="please_enter_address">Please enter address</string>
    <string name="please_enter_city">Please enter city</string>
    <string name="please_enter_state">Please enter state</string>
    <string name="please_select_country">Please select country</string>
    <string name="please_enter_verify_password">Please enter verify password</string>
    <string name="passwords_must_be_same">Passwords must be same</string>

</resources>
